--- a/JustAddCoffee.html
+++ b/JustAddCoffee.html
@@ -8,7 +8,6 @@
     <script src="JustAddCoffee.js"></script>
 </head>
 <body>
-    <div class="hero" id="hero"></div>
     <ul>
         <a href=""><li>Cart</li></a>
         <a href=""><li>Order</li></a>
@@ -16,7 +15,7 @@
         <a href="#hero"><li>Home</li></a>
     </ul>
 
-    
+    <div class="hero" id="hero">
         <div class="hero-text">
             <h1>Just Add Coffee</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi esse cumque eaque, aut nostrum possimus vitae a, ab autem illo doloribus unde eius rerum suscipit. Quam, voluptatibus minima. Ab, deserunt.</p>
