--- a/JustAddCoffee.html
+++ b/JustAddCoffee.html
@@ -6,22 +6,110 @@
     <title>Just Add Coffee</title>
     <link rel="stylesheet" href="JustAddCoffee.css">
     <script src="JustAddCoffee.js"></script>
+    <script src="https://kit.fontawesome.com/f9f4920310.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <ul>
-        <a href=""><li>Cart</li></a>
-        <a href=""><li>Order</li></a>
-        <a href=""><li>History</li></a>
-        <a href="#hero"><li>Home</li></a>
-    </ul>
-
-    <div class="hero" id="hero">
-        <div class="hero-text">
-            <h1>Just Add Coffee</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi esse cumque eaque, aut nostrum possimus vitae a, ab autem illo doloribus unde eius rerum suscipit. Quam, voluptatibus minima. Ab, deserunt.</p>
-            <button>Start Now</button>
+    <nav class="nav">
+        <ul class="navbar">
+    <li class="navlist"><a href="#hero" class="nav-link">Home</a></li>
+<li class="navlist"><a href="#about" class="nav-link">About</a></li>
+    <li class="navlist"><a href="#menu" class="nav-link">Menu</a></li>
+    <li class="navlist"><a href="#contact-section" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
+<!--Hero Section-->
+    <section class="hero" id="hero">
+        <div class="hero-text" >
+     <h1 class="hero-title">Just Add Coffee</h1>
+            <p class="hero-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, magni atque culpa illo similique molestiae facilis, aliquam animi tenetur, laudantium veniam laboriosam reprehenderit velit corrupti vero excepturi consequatur accusantium assumenda!</p>
+            <button class="hero-btn">Shop Now</button>
+            <button class="hero-btn">Shop Now</button>
         </div>
-        <img src="JustAddCoffeeLogo.png" alt="">
+        <img src="JustAddCoffeeLogo.png" alt="JustAddCoffeeLogo" class="hero-img" id="hero-img">
+    </section>
+
+    <section class="about" id="about">
+        <div class="aboutmetext">
+        <h1>About Me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur itaque dolore pariatur omnis modi, maxime inventore cupiditate, ut doloribus incidunt assumenda doloremque at. Ex, consequuntur! Placeat neque ratione rerum.</p>
+        </div>
+        <img src="Vanilla Creamer.jpg" alt="">
+    </section>
+
+    <!--Menu Section-->
+<section class="menu" id="menu">
+<h1 class="menu-main">Menu</h1>
+    <div class="menu-grid">
+    <div class="menu-container">
+    <img src="Cinnamon Creamer.jpg" alt="" class="menu-img">
+    <h3 class="menu-title">Creamer</h3>
+    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
     </div>
-</body>
+
+
+    <div class="menu-container">
+    <img src="Vanilla Creamer.jpg" alt="" class="menu-img">
+    <h3 class="menu-title">Creamer</h3>
+    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+    </div>
+
+    <div class="menu-container">
+    <img src="Whip Cream Creamer.jpg" alt="" class="menu-img">
+    <h3 class="menu-title">Creamer</h3>
+    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+        </div>
+
+    <div class="menu-container">
+    <img src="Hazelnut Creamer.jpg" alt="" class="menu-img">
+    <h3 class="menu-title">Creamer</h3>
+    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+            </div>
+
+    <div class="menu-container">
+    <img src="Vanilla Creamer.jpg" alt="" class="menu-img">
+    <h3 class="menu-title">Creamer</h3>
+    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+        </div>
+
+    <div class="menu-container">
+     <img src="Cinnamon Creamer.jpg" alt="" class="menu-img">
+    <h3 class="menu-title">Creamer</h3>
+    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+        </div>
+    
+        </div>          
+    <button class="view-more">View More</button>
+    </section>
+
+ 
+<section class="contact-section" id="contact-section">
+    <h1 id="contact">Contact Me</h1>
+    <div class="contact">
+        <div class="contact-img">
+        <img src="Cinnamon Creamer.jpg" alt=""></div>
+    <div class="contact-msg">
+        <form action="" method="post">
+            <label for="">First Name:<input type="text"></label><br>
+            <label for="">Last Name:<input type="text"></label><br>
+            <label for="">Phone Number:<input type="number"></label><br>
+
+  <label for="">Your Message:<br>
+        <textarea name="message" id=""></textarea>
+    </label>
+          <button type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+</section>
+
+
+    <footer>
+        <ul class="footer">
+        <li class="f-link"><a href="">Comming</a></li>
+        <li class="f-link"><a href="">Comming</a></li>
+        <li class="f-link"><a href="">Comming</a></li>
+        <li class="f-link"><a href="">Comming</a></li>
+        </ul>
+    </footer>
+   </body>
 </html>
