--- a/JustAddCoffee.html
+++ b/JustAddCoffee.html
@@ -9,107 +9,123 @@
     <script src="https://kit.fontawesome.com/f9f4920310.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="nav">
-        <ul class="navbar">
-    <li class="navlist"><a href="#hero" class="nav-link">Home</a></li>
-<li class="navlist"><a href="#about" class="nav-link">About</a></li>
-    <li class="navlist"><a href="#menu" class="nav-link">Menu</a></li>
-    <li class="navlist"><a href="#contact-section" class="nav-link">Contact</a></li>
-        </ul>
-    </nav>
-<!--Hero Section-->
-    <section class="hero" id="hero">
-        <div class="hero-text" >
-     <h1 class="hero-title">Just Add Coffee</h1>
-            <p class="hero-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, magni atque culpa illo similique molestiae facilis, aliquam animi tenetur, laudantium veniam laboriosam reprehenderit velit corrupti vero excepturi consequatur accusantium assumenda!</p>
-            <button class="hero-btn">Shop Now</button>
-            <button class="hero-btn">Shop Now</button>
-        </div>
-        <img src="JustAddCoffeeLogo.png" alt="JustAddCoffeeLogo" class="hero-img" id="hero-img">
-    </section>
+<nav>
+    <ul class="navbar">
+        <li class="nav-list"><a href="#home" class="navlink">Home</a></li>
+        <li class="nav-list"><a href="#about" class="navlink">About</a></li>
+        <li class="nav-list"><a href="#menu" class="navlink">Menu</a></li>
+        <li class="nav-list"><a href="#contact"class="navlink">Contact</a></li>
+    </ul>
+</nav>
 
-    <section class="about" id="about">
-        <div class="aboutmetext">
-        <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur itaque dolore pariatur omnis modi, maxime inventore cupiditate, ut doloribus incidunt assumenda doloremque at. Ex, consequuntur! Placeat neque ratione rerum.</p>
-        </div>
-        <img src="Vanilla Creamer.jpg" alt="">
-    </section>
-
-    <!--Menu Section-->
-<section class="menu" id="menu">
-<h1 class="menu-main">Menu</h1>
-    <div class="menu-grid">
-    <div class="menu-container">
-    <img src="Cinnamon Creamer.jpg" alt="" class="menu-img">
-    <h3 class="menu-title">Creamer</h3>
-    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
-    </div>
-
-
-    <div class="menu-container">
-    <img src="Vanilla Creamer.jpg" alt="" class="menu-img">
-    <h3 class="menu-title">Creamer</h3>
-    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
-    </div>
-
-    <div class="menu-container">
-    <img src="Whip Cream Creamer.jpg" alt="" class="menu-img">
-    <h3 class="menu-title">Creamer</h3>
-    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
-        </div>
-
-    <div class="menu-container">
-    <img src="Hazelnut Creamer.jpg" alt="" class="menu-img">
-    <h3 class="menu-title">Creamer</h3>
-    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+    <section id="home">
+        <div class="hero">
+            <div class="hero-text">
+                <h1 id="hero-title">Just Add Coffee</h1>
+                <p id="hero-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, reiciendis totam deleniti minima tempore iusto tenetur incidunt. Sapiente, unde suscipit, nihil cum exercitationem culpa adipisci nesciunt dignissimos excepturi nulla quisquam!</p>
+                <button id="hero-btns">Shop Now</button>
+                <button id="hero-btns">Shop Now</button>
             </div>
-
-    <div class="menu-container">
-    <img src="Vanilla Creamer.jpg" alt="" class="menu-img">
-    <h3 class="menu-title">Creamer</h3>
-    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
+            <div class="hero-img"><img src="JustAddCoffeeLogo.png" alt=""></div>
         </div>
-
-    <div class="menu-container">
-     <img src="Cinnamon Creamer.jpg" alt="" class="menu-img">
-    <h3 class="menu-title">Creamer</h3>
-    <p class="menu-desc">Lorem, ipsum dolor sit amet consectetur</p>
-        </div>
-    
-        </div>          
-    <button class="view-more">View More</button>
     </section>
 
- 
-<section class="contact-section" id="contact-section">
-    <h1 id="contact">Contact Me</h1>
-    <div class="contact">
-        <div class="contact-img">
-        <img src="Cinnamon Creamer.jpg" alt=""></div>
-    <div class="contact-msg">
-        <form action="" method="post">
-            <label for="">First Name:<input type="text"></label><br>
-            <label for="">Last Name:<input type="text"></label><br>
-            <label for="">Phone Number:<input type="number"></label><br>
-
-  <label for="">Your Message:<br>
-        <textarea name="message" id=""></textarea>
-    </label>
-          <button type="submit">Submit</button>
-        </form>
+    <section id="about">
+        <div class="about">
+        <div class="aboutme-text">
+            <h1 id="aboutme-title">About Me</h1>
+            <p id="aboutme-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cumque laudantium est, delectus dolorem distinctio veniam ea vero labore facere id doloremque. Rerum amet similique nihil blanditiis cum sunt hic?</p>
+        </div>
+    <div class="aboutme-img"><img src="Butter Pecan Creamer.jpg" alt=""></div>
     </div>
-</div>
+    </section>
+<section id="menu">
+<h1 id="menu-title">Menu</h1>
+    <div class="menu-grid">
+
+        <div class="menu-item">
+            <img src="Vanilla Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Cinnamon Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Butter Pecan Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Whip Cream Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Cinnamon Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Cinnamon Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Cinnamon Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Hazelnut Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+
+        <div class="menu-item">
+            <img src="Butter Pecan Creamer.jpg" alt="" class="menu-pic">
+            <h3 class="menu-title">Item</h3>
+            <p class="menu-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="add-btn">Add To Cart</button>
+        </div>
+    </div>
+
 </section>
+    <section id="contact">
+        <div class="contact">
+        <div class="socials">
+            <i class="fa-brands fa-square-instagram">Instagram</i>
+            <i class="fa-brands fa-square-instagram">Instagram</i>
+            <i class="fa-brands fa-square-instagram">Instagram</i>
+            <i class="fa-brands fa-square-instagram">Instagram</i>
+        </div>
+        <div class="message">
+            <label for="fname">First Name:<input type="text"></label><br>
+            <label for="fname">Last Name:<input type="text"></label><br>
+        <label for="fname">Email:<input type="email"></label><br>
+        <label for="fname">Message: <textarea name="message" id="" placeholder="Just wanted to say..."></textarea></label>
+        <input type="submit">
+    </div>
+    </section>
+    
 
 
-    <footer>
-        <ul class="footer">
-        <li class="f-link"><a href="">Comming</a></li>
-        <li class="f-link"><a href="">Comming</a></li>
-        <li class="f-link"><a href="">Comming</a></li>
-        <li class="f-link"><a href="">Comming</a></li>
-        </ul>
-    </footer>
    </body>
 </html>
