--- a/JustAddCoffee.html
+++ b/JustAddCoffee.html
@@ -109,18 +109,11 @@
 
 </section>
     <section id="contact">
-        <div class="contact">
-        <div class="socials">
-            <i class="fa-brands fa-square-instagram">Instagram</i>
-            <i class="fa-brands fa-square-instagram">Instagram</i>
-            <i class="fa-brands fa-square-instagram">Instagram</i>
-            <i class="fa-brands fa-square-instagram">Instagram</i>
-        </div>
         <div class="message">
             <label for="fname">First Name:<input type="text"></label><br>
             <label for="fname">Last Name:<input type="text"></label><br>
         <label for="fname">Email:<input type="email"></label><br>
-        <label for="fname">Message: <textarea name="message" id="" placeholder="Just wanted to say..."></textarea></label>
+        <label for="fname">Message: <textarea name="message" id="" placeholder="Just wanted to say..."></textarea></label><br>
         <input type="submit">
     </div>
     </section>
